# alvsanand

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: pages.yml  sync-pages.yml
assets/: custom.css
blog/: index.html
blog/2024/01/22/embracing-the-challenge/: index.html
blog/2024/01/28/journey-to-datahublocal/: index.html
blog/2024/02/04/homelab-for-begineers/: index.html
blog/2024/03/02/5-essential-things-to-know-before-building-your-homelab/: index.html
blog/2024/04/02/yet-another-kubernetes-to-do-list/: index.html
blog/2025/12/26/migrating-postgresql-in-kubernetes-a-homelab-christmas-adventure/: index.html
blog/category/datahublocal/: index.html
blog/category/devops/: index.html
blog/category/general/: index.html
blog/category/hardware/: index.html
blog/category/learning/: index.html
docs/: index.md
docs/assets/: custom.css
docs/blog/: .authors.yml
docs/blog/posts/: 202401-embracing-the-challenge.md  202401-journey-to-datahub-local.md  20240115_embracing_the_challenge.md  202401_embracing_the_challenge.md  202402-homelab-for-begineers.md  202403-5-things-to-know.md  202403-yet-another-kubernetes-to-do-list.md  202404-yet-another-kubernetes-to-do-list.md  202512-migrating-postgresql-in-kubernetes.md
docs/img/: datahub-local-plan.excalidraw  datahub-local-steps.excalidraw
img/: datahub-local-plan.excalidraw  kubernetes-to-do-list.excalidraw
