[project]
name = "alvsanand"
version = "0.1.0"
description = "Personal blog"
authors = [
    {name = "Alvaro Santos Andres", email = "alvsanand@gmail.com"}
]
license = {text = "Apache"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-material>=9.5.3",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocs-glightbox>=0.3.6",
    "mkdocs-redirects>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docs"]
